fix page loading on mobile

--- a/src/components/PageLoadingState/PageLoadingState.module.css
+++ b/src/components/PageLoadingState/PageLoadingState.module.css
@@ -10,10 +10,10 @@
 .loadingRoot :global(.dinesykmeldte-sidemeny__header)::before {
     content: ' ';
     height: 4px;
-    width: 100%;
+    width: calc(100% - var(--loading-percent));
     position: absolute;
     bottom: -4px;
     left: var(--loading-percent);
     background-color: var(--a-blue-50);
-    transition: left 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: left 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55), width 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
